--- a/sample.html
+++ b/sample.html
@@ -17,10 +17,9 @@
     <script type="text/javascript" src="https://www.glowscript.org/lib/jquery/2.1/jquery-ui.custom.min.js"></script>
     <script type="text/javascript" src="https://www.glowscript.org/package/glow.3.1.min.js"></script>
     <script type="text/javascript" src="https://www.glowscript.org/package/RSrun.3.1.min.js"></script>
-    <script type="text/javascript"><!--//--><![CDATA[//><!--
-    
+    <script type="text/javascript">
     // START JAVASCRIPT
-    ;(function() {;
+    (function() {;
     var ρσ_modules = {};
     ρσ_modules.pythonize = {};
     
